--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
  <a href="zadanie2_Morawiak.html" target="strony">Zadanie 2</a><br>
  <a href="zadanie3_Morawiak.html" target="strony">Zadanie 3</a><br> 
  <a href="zadanie4_Morawiak.html" target="strony">Zadanie 4</a><br><br>
-<a href="Przy_z5_1.html" target="strony">Z5-importowany</a><br>
-<a href="Przy_z5_2.html" target="strony">Z5-zewnetrzny</a><br>
-<a href="Przy_z5_3.html" target="strony">Z5-wewnetrzny</a><br>
-<a href="Przy_z5_4.html" target="strony">Z5-liniowy</a><br><br>
+<a href="Mora_z5_1.html" target="strony">Z5-importowany</a><br>
+<a href="Mora_z5_2.html" target="strony">Z5-zewnetrzny</a><br>
+<a href="Mora_z5_3.html" target="strony">Z5-wewnetrzny</a><br>
+<a href="Mora_z5_4.html" target="strony">Z5-liniowy</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
