--- a/Z5_kod-importowany.html
+++ b/Z5_kod-importowany.html
@@ -1,21 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+<META HTTP-EQUIV="content-type" CONTENT="text/html>
+<meta charset="UTF-8">
+<link rel="Stylesheet" type="text/css" href="style.css" />
+
+</head>
+<body>
+
+<textarea cols="84" rows="41" >
 
 DOKUMENT HTML
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>styl importowany</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<!-- 17.03.2022 Morawiak -->
-		<style>
-			@import url("Mora_z5_1.css ");
-		</style>
-	</head>
-		<body bgcolor="silver">
-		<p>Morawiak</p>
-		<p>Programowanie to bardzo interesujace zajecie</p>
-	</body>
+    <head>
+        <title>styl importowany</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+        <style>
+            @import url("Mora_zad5_1.css ");
+        </style>
+    </head>
+        <body bgcolor="silver">
+        <p>Morawiak</p>
+        <p>Programowanie to bardzo interesujace zajecie</p>
+    </body>
 </html>
 
 
 
-
+DOKUMENT CSS
+p {
+        color: blue;
+        font-size: 85px;
+    }
