--- a/Mora_z5_1.html
+++ b/Mora_z5_1.html
@@ -12,7 +12,7 @@ DOKUMENT HTML
 	</head>
 		<body bgcolor="silver">
 		<p>Morawiak</p>
-		<p>Programowanie to przede wszystkim myślenie a nie stukanie w klawiaturę</p>
+		<p>Programowanie to bardzo interesujace zajecie</p>
 	</body>
 </html>
 
