--- a/Mora_z6.html
+++ b/Mora_z6.html
@@ -7,10 +7,11 @@
 </head>
 <body bgcolor="silver">
 <h1> Morawiak</h1>
-<p align="left"> <font color="green" size="20" face="Arial"> :) usmiechnieta buzka</font> </p> <br>
-<p align="left"> <font color="blue" size="30" face="Arial"> :( smutna buzka</font> </p> <br>
-<p align="left"> <font color="green" size="20" face="Arial"> :) usmiechnieta buzka</font> </p> <br>
-<p align="left"> <font color="blue" size="30" face="Arial"> :P buzka z wystawionym jezykiem</font> </p> <br>
-<p align="left"> <font color="green" size="20" face="Arial"> :O zdziwiona buzka</font> </p> <br>
-<p align="left"> <font color="blue" size="30" face="Arial"> :() buzka kaczor</font> </p> <br>
+
+<p style="color: green;font-size: 20 px;">:) usmiechnieta buzka</p>
+<p style="color: blue;font-size: 30 px;">:( smutna buzka</p>
+<p style="color: green;font-size: 20 px;">:) usmiechnieta buzka</p>
+<p style="color: blue;font-size: 30 px;">:P buzka z wystawionym jezykiem </p>
+<p style="color: green;font-size: 20 px;">:O zdziwiona buzka </p>
+<p style="color: blue;font-size: 30 px;">:() buzka kaczor </p>
 </body>
