--- a/Mora_z5_2.html
+++ b/Mora_z5_2.html
@@ -10,7 +10,7 @@ DOKUMENT HTML
 	</head>
 	<body bgcolor="silver">
 		<p>Morawiak</p>
-		<p>Większość scen hakowania w filmach niewiele ma wspólnego z rzeczywistością</p>
+		<p>Programowanie ulatwia codzienne zycie</p>
 	</body>
 </html>
 
