--- a/Mora_z5_3.html
+++ b/Mora_z5_3.html
@@ -15,7 +15,7 @@ DOKUMENT HTML
 	</head>
 	<body bgcolor="silver">
 		<p>Morawiak</p>
-		<p>NASA nadal prowadzi projekty dotyczące programowania z lat 70-tych</p>
+		<p>Programowanie to bardzo przydatna rzecz</p>
 	</body>
 </html>
 
