--- a/Mora_z5_4.html
+++ b/Mora_z5_4.html
@@ -9,7 +9,7 @@ DOKUMENT HTML
 	</head>
 	<body bgcolor="silver">
 		<p style="color: blue;font-size: 55 px;"> Morawiak</p>
-		<p>Istnieje ponad 700 języków programowania na świecie</p>
+		<p>Istnieje duzo jezykow programowania</p>
 	</body>
 </html>
 
