--- a/Z5_kod-zewnetrzny.html
+++ b/Z5_kod-zewnetrzny.html
@@ -1,21 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>
+<META HTTP-EQUIV="content-type" CONTENT="text/html>
+<meta charset="UTF-8">
+<link rel="Stylesheet" type="text/css" href="style.css" />
+
+</head>
+<body>
+
+<textarea cols="84" rows="41" >
 
 DOKUMENT HTML
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>styl zewnetrzny</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<!-- 17.03.2022 Morawiak -->
-		<LINK href="Mora_z5_2.css" rel="stylesheet" type="text/CSS" />
-	</head>
-	<body bgcolor="silver">
-		<p>Morawiak</p>
-		<p>Programowanie ulatwia codzienne zycie</p>
-	</body>
+    <head>
+        <title>styl zewnetrzny</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+        <LINK href="Mora_z5_2.css" rel="stylesheet" type="text/CSS" />
+    </head>
+    <body bgcolor="silver">
+        <p>Morawiak</p>
+        <p>Programowanie ulatwia codzienne zycie</p>
+    </body>
 </html>
 
 
-
-
-
-
+DOKUMENT CSS
+p {
+color: blue;
+font-size: 65 px;
+ }
