--- a/Z5_kod-liniowy.html
+++ b/Z5_kod-liniowy.html
@@ -1,16 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+<META HTTP-EQUIV="content-type" CONTENT="text/html>
+<meta charset="UTF-8">
+<link rel="Stylesheet" type="text/css" href="style.css" />
+
+</head>
+<body>
+
+<textarea cols="84" rows="41" >
 
 DOKUMENT HTML
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>styl liniowy</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<!-- 17.03.2022 Morawiak -->
-	</head>
-	<body bgcolor="silver">
-		<p style="color: blue;font-size: 55 px;"> Morawiak</p>
-		<p>Istnieje duzo jezykow porgramowania</p>
-	</body>
+    <head>
+        <title>styl liniowy</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+    </head>
+    <body bgcolor="silver">
+        <p style="color: blue;font-size: 55 px;">Morawiak</p>
+        <p>Istnieje duzo jezykow programowania</p>
+    </body>
 </html>
-
-
