--- a/Mora_z6.html
+++ b/Mora_z6.html
@@ -15,3 +15,4 @@
 <p style="color: green;font-size: 20 px;">:O zdziwiona buzka </p>
 <p style="color: blue;font-size: 30 px;">:() buzka kaczor </p>
 </body>
+  </html>
