--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <a href="Mora_z5_2.html" target="strony">Z5-zewnetrzny</a><br>
 <a href="Mora_z5_3.html" target="strony">Z5-wewnetrzny</a><br>
 <a href="Mora_z5_4.html" target="strony">Z5-liniowy</a><br><br>
-<a href="Mora_z6.css" target="strony">Z6-Mora</a><br><br>
+<a href="Mora_z6.html" target="strony">Z6-Mora</a><br><br>
 <a href="Mora_z7.html" target="strony">Z7-Mora</a><br><br>
 <a href="Mora_z7.html" target="strony">Z8-Mora</a><br><br>
 <a href="Mora_z7.html" target="strony">Z9-Mora</a><br><br>
