--- a/Z5_kod-liniowy.html
+++ b/Z5_kod-liniowy.html
@@ -19,7 +19,7 @@ DOKUMENT HTML
 
     </head>
     <body bgcolor="silver">
-        <p style="color: blue;font-size: 55 px;">Jedrzejewski</p>
+        <p style="color: blue;font-size: 55 px;">Morawiak</p>
         <p>Istnieje duzo jezykow programowania</p>
     </body>
 </html>
