--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <a href="Mora_z5_4.html" target="strony">Z5-liniowy</a><br><br>
 <a href="Mora_z6.html" target="strony">Z6-Mora</a><br><br>
 <a href="Mora_z7.html" target="strony">Z7-Mora</a><br><br>
-<a href="Mora_z8.html" target="strony">Z8-Mora</a><br><br>
-<a href="Mora_z9.html" target="strony">Z9-Mora</a><br><br>
-<a href="Mora_z10.html" target="strony">Z10-Mora</a><br><br>
-<a href="Mora_z11.html" target="strony">Z11-Mora</a><br><br>
-<a href="Mora_z12.html" target="strony">Z12-Mora</a><br><br>
+<a href="Z8_Mora.html" target="strony">Z8-Mora</a><br><br>
+<a href="Z9_Mora.html" target="strony">Z9-Mora</a><br><br>
+<a href="Z10_Mora.html" target="strony">Z10-Mora</a><br><br>
+<a href="Z11_Mora.html" target="strony">Z11-Mora</a><br><br>
+<a href="Z12_Mora.html" target="strony">Z12-Mora</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -30,9 +30,9 @@
 <a href="Z5_kod-zewnetrzny.html" target="strony">Z5_kod-zewnetrzny</a><br>
 <a href="Z5_kod-wewnetrzny.html" target="strony">Z5_kod-wewnetrzny</a><br>
 <a href="Z5_kod-liniowy.html" target="strony">Z5_kod-liniowy</a><br>
-<a href="Z6_kod-zewnetrzny.html" target="strony">Z5_kod-zewnetrzny</a><br>
-<a href="Z7_kod-zewnetrzny.html" target="strony">Z5_kod-zewnetrzny</a><br>
-<a href="Z8_kod-zewnetrzny.html" target="strony">Z6_kod-zewnetrzny</a><br>
+<a href="Z6_kod-zewnetrzny.html" target="strony">Z6_kod-zewnetrzny</a><br>
+<a href="Z7_kod-zewnetrzny.html" target="strony">Z7_kod-zewnetrzny</a><br>
+<a href="Z8_kod-zewnetrzny.html" target="strony">Z8_kod-zewnetrzny</a><br>
 </td>
 </tr>
 </table>
