--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <a href="Z5_kod-zewnetrzny.html" target="strony">Z5_kod-zewnetrzny</a><br>
 <a href="Z5_kod-wewnetrzny.html" target="strony">Z5_kod-wewnetrzny</a><br>
 <a href="Z5_kod-liniowy.html" target="strony">Z5_kod-liniowy</a><br>
-<a href="Z6_Mora_kod-zewnetrzny.html" target="strony">Z6_kod-zewnetrzny</a><br>
-<a href="Z7_Mora_kod-zewnetrzny.html" target="strony">Z7_kod-zewnetrzny</a><br>
-<a href="Z8_Mora_kod-zewnetrzny.html" target="strony">Z8_kod-zewnetrzny</a><br>
+<a href="Z6_kod-zewnetrzny.html" target="strony">Z6_kod-zewnetrzny</a><br>
+<a href="Z7_kod-zewnetrzny.html" target="strony">Z7_kod-zewnetrzny</a><br>
+<a href="Z8_kod-zewnetrzny.html" target="strony">Z8_kod-zewnetrzny</a><br>
 </td>
 </tr>
 </table>
