--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <a href="Mora_z5_2.html" target="strony">Z5-zewnetrzny</a><br>
 <a href="Mora_z5_3.html" target="strony">Z5-wewnetrzny</a><br>
 <a href="Mora_z5_4.html" target="strony">Z5-liniowy</a><br><br>
-<a href="Mora_z6.html" target="strony">Z6-Mora</a><br><br>
-<a href="Mora_z7.html" target="strony">Z7-Mora</a><br><br>
-<a href="Z8_Mora.html" target="strony">Z8-Mora</a><br><br>
-<a href="Z9_Mora.html" target="strony">Z9-Mora</a><br><br>
-<a href="Z10_Mora.html" target="strony">Z10-Mora</a><br><br>
-<a href="Z11_Mora.html" target="strony">Z11-Mora</a><br><br>
-<a href="Z12_Mora.html" target="strony">Z12-Mora</a><br><br>
+<a href="Mora_z6.html" target="strony">Zadanie 6</a><br><br>
+<a href="Mora_z7.html" target="strony">Zadanie 7</a><br><br>
+<a href="Z8_Mora.html" target="strony">Zadanie 8</a><br><br>
+<a href="Z9_Mora.html" target="strony">Zadanie 9</a><br><br>
+<a href="Z10_Mora.html" target="strony">Zadanie 10</a><br><br>
+<a href="Z11_Mora.html" target="strony">Zadanie 11</a><br><br>
+<a href="Z12_Mora.html" target="strony">Zadanie 12</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
