--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <a href="Z10_Mora.html" target="strony">Zadanie 10</a><br><br>
 <a href="Z11_Mora.html" target="strony">Zadanie 11</a><br><br>
 <a href="Z12_Mora.html" target="strony">Zadanie 12</a><br><br>
+<a href="Z16_Mora" target="strony">Zadanie 16</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
