--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <a href="Z11_Mora.html" target="strony">Zadanie 11</a><br><br>
 <a href="Z12_Mora.html" target="strony">Zadanie 12</a><br><br>
 <a href="zadanie16_Mora" target="strony">Zadanie 16</a><br><br>
+<a href="zadanie19_Mora" target="strony">Zadanie 19</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -34,6 +35,7 @@
 <a href="Z6_kod-zewnetrzny.html" target="strony">Z6_kod-zewnetrzny</a><br>
 <a href="Z7_kod-zewnetrzny.html" target="strony">Z7_kod-zewnetrzny</a><br>
 <a href="Z8_kod-zewnetrzny.html" target="strony">Z8_kod-zewnetrzny</a><br>
+ <a href="zadanie19_kod_Mora" target="strony">Zadanie19_kod</a><br>
 </td>
 </tr>
 </table>
