--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a href="Z6_kod-zewnetrzny.html" target="strony">Z6_kod-zewnetrzny</a><br>
 <a href="Z7_kod-zewnetrzny.html" target="strony">Z7_kod-zewnetrzny</a><br>
 <a href="Z8_kod-zewnetrzny.html" target="strony">Z8_kod-zewnetrzny</a><br>
- <a href="zadanie19_kod_Mora.css" target="strony">Zadanie19_kod</a><br>
+ <a href="zadanie19_kod_Mora.html" target="strony">Zadanie19_kod</a><br>
 </td>
 </tr>
 </table>
