--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <a href="Z11_Mora.html" target="strony">Zadanie 11</a><br><br>
 <a href="Z12_Mora.html" target="strony">Zadanie 12</a><br><br>
 <a href="zadanie16_Mora.html" target="strony">Zadanie 16</a><br><br>
+<a href="zadanie18_Mora.html" target="strony">Zadanie 18</a><br><br>
 <a href="zadanie19_Mora.html" target="strony">Zadanie 19</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
