--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <a href="Z12_Mora.html" target="strony">Zadanie 12</a><br><br>
 <a href="zadanie16_Mora.html" target="strony">Zadanie 16</a><br><br>
 <a href="zadanie18_Mora.html" target="strony">Zadanie 18</a><br><br>
+<a href="zadanie17_p1_Mora_" target="strony">Zadanie 17_p1</a><br><br>
+<a href="zadanie17_p2_Mora_" target="strony">Zadanie 17_p2</a><br><br>
 <a href="zadanie19_Mora.html" target="strony">Zadanie 19</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
@@ -36,7 +38,9 @@
 <a href="Z6_kod-zewnetrzny.html" target="strony">Z6_kod-zewnetrzny</a><br>
 <a href="Z7_kod-zewnetrzny.html" target="strony">Z7_kod-zewnetrzny</a><br>
 <a href="Z8_kod-zewnetrzny.html" target="strony">Z8_kod-zewnetrzny</a><br>
- <a href="zadanie19_kod_Mora.html" target="strony">Zadanie19_kod</a><br>
+<a href="zadanie17_p1_Mora_Kod_" target="strony">Zadanie17_p1_kod</a><br>
+<a href="zadanie17_p2_Mora_Kod_" target="strony">Zadanie17_p2_kod</a><br>
+<a href="zadanie19_kod_Mora.html" target="strony">Zadanie19_kod</a><br>
 </td>
 </tr>
 </table>
