--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <a href="Z8_kod-zewnetrzny.html" target="strony">Z8_kod-zewnetrzny</a><br>
 <a href="zadanie17_p1_Mora_Kod_" target="strony">Zadanie17_p1_kod</a><br>
 <a href="zadanie17_p2_Mora_Kod_" target="strony">Zadanie17_p2_kod</a><br>
+<a href="Zadanie18_Mora_kod" target="strony">Zadanie18_kod</a><br>
 <a href="zadanie19_kod_Mora.html" target="strony">Zadanie19_kod</a><br>
 </td>
 </tr>
