--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <a href="zadanie17_p2_Mora_" target="strony">Zadanie 17_p2</a><br><br>
 <a href="zadanie18_Mora.html" target="strony">Zadanie 18</a><br><br
 <a href="zadanie19_Mora.html" target="strony">Zadanie 19</a><br><br>
+<a href="zadanie21_Mora.html" target="strony">Zadanie 21</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
