--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <a href="zadanie19_Mora.html" target="strony">Zadanie 19</a><br><br>
 <a href="zadanie21_Mora.html" target="strony">Zadanie 21</a><br><br>
 <a href="zadanie32_Mora.html" target="strony">Zadanie 32</a><br><br>
+<a href="zadanie33_Mora.html" target="strony">Zadanie 33</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -44,6 +45,8 @@
 <a href="zadanie17_p2_Mora_Kod_" target="strony">Zadanie17_p2_kod</a><br>
 <a href="Zadanie18_Mora_kod" target="strony">Zadanie18_kod</a><br>
 <a href="zadanie19_kod_Mora.html" target="strony">Zadanie19_kod</a><br>
+<a href="zadanie32_kod_Mora.html" target="strony">Zadanie32_kod</a><br>
+<a href="zadanie33_kod_Mora.html" target="strony">Zadanie33_kod</a><br>
 </td>
 </tr>
 </table>
