--- a/zadanie32_Mora_.html
+++ b/zadanie32_Mora_.html
@@ -1,18 +1,53 @@
+<!DOCTYPE html>
+<html lang="pl-PL">
 <html>
+<head>
+<meta charset="utf-8">
+<title> </title>
+</head>
 <body>
-
-<p align="center"> <font color="white" size="4" face="Arial"> Opis stylu zewnętrznego </font> </p> <br>
-
-<td>
-<ul>
-<li>Gdzie wstawiany jest styl zewnętrzny, jaki znacznik jest za to odpowiedzialny oraz ile razy może on występować w dokumencie, jako podłączenie stylu CSS</li><br>
-<li>Jak jest najprostsza forma wstawiania stylu zewnętrznego</li><br>
-<li>Ile arkuszy styli może być dołączanych do jednego dokumentu HTML</li><br>
-<li>Co się dzieje w przypadku konfliktów</li><br>
-<li>Jak są tworzone i edytowane pliki arkuszy z użyciem edytora tekstowego?</li><br>
-</ul> 
-</td>
+<ol>
+<li><h1>Podaj definicje modelu pudełkowego</h1></li>
+<p>Każdy element w dokumencie HTML, otacza się prostokątnym obszarem zwanym pudełkiem (ang. Box model). Pudełko składa się z kilku warstw:<br>
+zawartość modelu pudełkowego:<br>
+ "content" – zawartość elementu (np.: tekst, obrazek)<br>
+ "padding" - otaczające marginesy wewnętrzne, odstęp między obramowaniem i zawartością elementu<br>
+ "border" – obramowania wokół zawartości elementu, ma styl i kolor.<br>
+ "margin" – marginesy wokół ramki (margines zewnętrzny). Jest to pusty obszar wokół ramki, który nie ma koloru tła i jest przeźroczysty.</p>
+<li><h1>Wykonaj oraz uzupełnij tabele</h1></li>
+<table style="width:100%" border :1px>
+<tr>
+<td>zawartość</td>
+<td>opis</td
+</tr>
+<tr>
+<td>content</td>
+<td>zawartość elementu (np.: tekst, obrazek)</td>
+</tr>
+<tr>
+<td>padding</td>
+<td>otaczające marginesy wewnętrzne, odstęp między obramowaniem i zawartością elementu</td>
+</tr>
+<tr>
+<td>border</td>
+<td>obramowania wokół zawartości elementu, ma styl i kolor.</td>
+</tr>
+<tr>
+<td>margin</td>
+<td>marginesy wokół ramki (margines zewnętrzny). Jest to pusty obszar wokół ramki, który nie ma koloru tła i jest przeźroczysty.</td>
+</tr>
 </table>
+<li><h1>Podaj dwie uwagi na temat układu pudełkowego</h1></li>
+<p>UWAGA 1</p>
+<p>Padding, border i margin mogą mieć zerową wartość.</p>
+<p>UWAGA 2</p>
+<p>Tło elementu jest określone dla wszystkich z podanych powyżej obszarów z wyjątkiem marginesów zewnętrznych, które zawsze są przezroczyste (transparent).</p>
+<li><h1>Wstaw grafikę obrazującą model pudełkowy.</h1></li>
+<img src="pudelko.jpg" />
+<li><h1>Wstaw grafikę obrazującą różnicę pomiędzy paddingiem i marginesem wraz z opisem.</h1></li>
+<img src="roznica.jpg" />
+</ol>
 </body>
 </html>
 <!- Max Morawiak !>
+
