--- a/zadanie33_Mora.html
+++ b/zadanie33_Mora.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>zadanie 32-nazwisko_ucznia</title>
+<title>zadanie 32 Morawiak</title>
 <meta charset="utf-8" />
 <style type="text/css">
 h1 {
@@ -31,6 +31,6 @@ background : rgb(100,100,100);
 </style>
 </head>
 <body>
-<h1>tu wpisz twoje nazwisko</h1>
-<h2>tu wpisz twoje imię</h2>
+<h1>Morawiak</h1>
+<h2>Max</h2>
  <!- Max Morawiak !>
