--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <a href="zadanie21_Mora.html" target="strony">Zadanie 21</a><br><br>
 <a href="zadanie32_Mora.html" target="strony">Zadanie 32</a><br><br>
 <a href="zadanie33_Mora.html" target="strony">Zadanie 33</a><br><br>
+<a href="zadanie34_Mora.html" target="strony">Zadanie 34</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -47,6 +48,8 @@
 <a href="zadanie19_kod_Mora.html" target="strony">Zadanie19_kod</a><br>
 <a href="zadanie32_kod_Mora.html" target="strony">Zadanie32_kod</a><br>
 <a href="zadanie33_kod_Mora.html" target="strony">Zadanie33_kod</a><br>
+<a href="zadanie34_kod_Mora.html" target="strony">Zadanie34_kod</a><br>
+
 </td>
 </tr>
 </table>
