--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <a href="zadanie18_Mora.html" target="strony">Zadanie 18</a><br><br
 <a href="zadanie19_Mora.html" target="strony">Zadanie 19</a><br><br>
 <a href="zadanie21_Mora.html" target="strony">Zadanie 21</a><br><br>
-<a href="zadanie32_Mora.html" target="strony">Zadanie 32</a><br><br>
+<a href="zadanie32_Mora_.html" target="strony">Zadanie 32</a><br><br>
 <a href="zadanie33_Mora.html" target="strony">Zadanie 33</a><br><br>
 <a href="zadanie34_Mora.html" target="strony">Zadanie 34</a><br><br>
 </td>
