--- a/zadanie33_kod_Mora.html
+++ b/zadanie33_kod_Mora.html
@@ -45,4 +45,4 @@ background : rgb(100,100,100);
 <body>
 <h1>tu wpisz twoje nazwisko</h1>
 <h2>tu wpisz twoje imię</h2>
- <!- Max Morawiak !>
+ <!- Max Morawiak->
