--- a/zadanie34_Mora.html
+++ b/zadanie34_Mora.html
@@ -5,6 +5,8 @@
 <meta charset="utf-8" />
 <style type="text/css">
 h1 {
+background-color:RGB(106 90 205);
+font-size:14px;
 width: 350pt;
 height:2.5cm;
 padding : 50px;
@@ -16,6 +18,8 @@ border-right : 4px dashed fuchsia;
 
 }
 h2 {
+background-color:RGB(72 61 139);
+font-size:19px;
 width: 200pt;
 height:3cm;
 padding : 30px;
@@ -24,6 +28,7 @@ border : 7px groove gray;
 
 }
 h3 {
+background-color:RGB(123 104 238);
 width: 300pt;
 height:3cm;
 padding : 20px;
@@ -34,7 +39,28 @@ border : 10px inset purple;
 </style>
 </head>
 <body>
-<h1></h1>
-<h2></h2>
-<h3></h3>
- <!- Max Morawiak !>
+<h1>Morawiak<br>
+width: 350pt;<br>
+height:2.5cm;<br>
+padding : 50px;<br>
+margin-left : 900px;<br>
+border-top : 4px dashed black;<br>
+border-bottom : 4px dashed gray;<br>
+border-left : 4px dashed red;<br>
+border-right : 4px dashed fuchsia;<br>
+</h1>
+<h2>Max<br>
+width: 200pt;<br>
+height:3cm;<br>
+padding : 30px;
+margin-left : 750px;<br>
+border : 7px groove gray;<br>
+</h2>
+<h3>22 3K<br>
+width: 300pt;<br>
+height:3cm;<br>
+padding : 20px;<br>
+margin-left : 500px;<br>
+border : 10px inset purple;<br>
+</h3>
+ <!- Max Morawiak ->
