--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <a href="zadanie32_Mora_.html" target="strony">Zadanie 32</a><br><br>
 <a href="zadanie33_Mora.html" target="strony">Zadanie 33</a><br><br>
 <a href="zadanie34_Mora.html" target="strony">Zadanie 34</a><br><br>
+<a href="zadanie35_Mora.html" target="strony">Zadanie 35</a><br><br>\
+<a href="zadanie36_Mora.html" target="strony">Zadanie 36</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -49,6 +51,8 @@
 <a href="zadanie32_kod_Mora.html" target="strony">Zadanie32_kod</a><br>
 <a href="zadanie33_kod_Mora.html" target="strony">Zadanie33_kod</a><br>
 <a href="zadanie34_kod_Mora.html" target="strony">Zadanie34_kod</a><br>
+<a href="zadanie36_kod_Mora.html" target="strony">Zadanie36_kod</a><br>
+
 
 </td>
 </tr>
