--- a/zadanie36_kod_Mora.html
+++ b/zadanie36_kod_Mora.html
@@ -37,12 +37,12 @@ h1 {
  }
 h2 {
  margin : 20px;
- border : 1px solid black;
+ border : 6px solid green;
  background : rgb(233,150,122);
  }
 h3 {
  margin : 20px;
- border : 1px inset black;
+ border : 11px inset red;
  background : rgb(123,104,238);
  }
 
