--- a/zadanie36_Mora.html
+++ b/zadanie36_Mora.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+<META HTTP-EQUIV="content-type" CONTENT="text/html>
+<meta charset="UTF-8">
+<link rel="Stylesheet" type="text/css" href="style.css" />
+
+</head>
+<body>
+<textarea cols="84" rows="41" >
+
+DOKUMENT HTML
+<!DOCTYPE html>
+<html>
  <head>
-<title>zadanie 35 Morawiak</title>
+<title>zadanie 36 Morawiak</title>
 <meta charset="utf-8" />
  <style type="text/css">
  body{
@@ -25,12 +37,12 @@ h1 {
  }
 h2 {
  margin : 20px;
- border : 1px solid black;
+ border : 6px solid green;
  background : rgb(233,150,122);
  }
 h3 {
  margin : 20px;
- border : 1px inset black;
+ border : 11px inset red;
  background : rgb(123,104,238);
  }
 
