--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a href="zadanie33_Mora.html" target="strony">Zadanie 33</a><br><br>
 <a href="zadanie34_Mora.html" target="strony">Zadanie 34</a><br><br>
 <a href="zadanie35_Mora.html" target="strony">Zadanie 35</a><br><br>\
-<a href="zadanie36_Mora.html_" target="strony">Zadanie 36</a><br><br>
+<a href="zadanie36_Mora_.html" target="strony">Zadanie 36</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
