--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <a href="zadanie34_Mora.html" target="strony">Zadanie 34</a><br><br>
 <a href="zadanie35_Mora.html" target="strony">Zadanie 35</a><br><br>\
 <a href="zadanie36_Mora_.html" target="strony">Zadanie 36</a><br><br>
+<a href="zadanie64_Mora.html" target="strony">Zadanie 64</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -52,7 +53,7 @@
 <a href="zadanie33_kod_Mora.html" target="strony">Zadanie33_kod</a><br>
 <a href="zadanie34_kod_Mora.html" target="strony">Zadanie34_kod</a><br>
 <a href="zadanie36_kod_Mora.html" target="strony">Zadanie36_kod</a><br>
-
+<a href="zadanie64_kod_Mora.html" target="strony">Zadanie64_kod</a><br>
 
 </td>
 </tr>
