--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
@@ -31,9 +30,11 @@
 <a href="zadanie32_Mora_.html" target="strony">Zadanie 32</a><br><br>
 <a href="zadanie33_Mora.html" target="strony">Zadanie 33</a><br><br>
 <a href="zadanie34_Mora.html" target="strony">Zadanie 34</a><br><br>
-<a href="zadanie35_Mora.html" target="strony">Zadanie 35</a><br><br>\
+<a href="zadanie35_Mora.html" target="strony">Zadanie 35</a><br><br>
 <a href="zadanie36_Mora_.html" target="strony">Zadanie 36</a><br><br>
 <a href="zadanie64_Mora.html" target="strony">Zadanie 64</a><br><br>
+<a href="zadanie65_Mora.html" target="strony">Zadanie 65</a><br><br>
+<a href="zadanie66_Mora.html" target="strony">Zadanie 66</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -54,6 +55,8 @@
 <a href="zadanie34_kod_Mora.html" target="strony">Zadanie34_kod</a><br>
 <a href="zadanie36_kod_Mora.html" target="strony">Zadanie36_kod</a><br>
 <a href="zadanie64_kod_Mora.html" target="strony">Zadanie64_kod</a><br>
+<a href="zadanie65_kod_Mora.html" target="strony">Zadanie65_kod</a><br>
+<a href="zadanie66_kod_Mora.html" target="strony">Zadanie66_kod</a><br>
 
 </td>
 </tr>
