--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <a href="zadanie64_Mora.html" target="strony">Zadanie 64</a><br><br>
 <a href="zadanie65_Mora.html" target="strony">Zadanie 65</a><br><br>
 <a href="zadanie66_Mora.html" target="strony">Zadanie 66</a><br><br>
+<a href="zadanie67_Mora.html" target="strony">Zadanie 67</a><br><br>
+<a href="zadanie66_Mora.html" target="strony">Zadanie 66</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -57,6 +59,9 @@
 <a href="zadanie64_kod_Mora.html" target="strony">Zadanie64_kod</a><br>
 <a href="zadanie65_kod_Mora.html" target="strony">Zadanie65_kod</a><br>
 <a href="zadanie66_kod_Mora.html" target="strony">Zadanie66_kod</a><br>
+<a href="zadanie67_kod_Mora.html" target="strony">Zadanie67_kod</a><br>
+<a href="zadanie68_kod_Mora.html" target="strony">Zadanie68_kod</a><br>
+
 
 </td>
 </tr>
