--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <a href="zadanie66_Mora.html" target="strony">Zadanie 66</a><br><br>
 <a href="zadanie67_Mora.html" target="strony">Zadanie 67</a><br><br>
 <a href="zadanie68_Mora.html" target="strony">Zadanie 68</a><br><br>
+<a href="zadanie69_Mora.html" target="strony">Zadanie 69</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
