--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <a href="zadanie68_Mora.html" target="strony">Zadanie 68</a><br><br>
 <a href="zadanie69_Mora.html" target="strony">Zadanie 69</a><br><br>
 <a href="zad_71_Mora.html" target="strony">Zadanie 71</a><br><br>
+<a href="zad_58_Mora.html" target="strony">Zadanie 58</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
