--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <a href="zadanie34_Mora.html" target="strony">Zadanie 34</a><br><br>
 <a href="zadanie35_Mora.html" target="strony">Zadanie 35</a><br><br>
 <a href="zadanie36_Mora_.html" target="strony">Zadanie 36</a><br><br>
+<a href="zadanie62_Mora.html" target="strony">Zadanie 62</a><br><br>
 <a href="zadanie64_Mora.html" target="strony">Zadanie 64</a><br><br>
 <a href="zadanie65_Mora.html" target="strony">Zadanie 65</a><br><br>
 <a href="zadanie66_Mora.html" target="strony">Zadanie 66</a><br><br>
