--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
 <a href="zadanie67_Mora.html" target="strony">Zadanie 67</a><br><br>
 <a href="zadanie68_Mora.html" target="strony">Zadanie 68</a><br><br>
 <a href="zadanie69_Mora.html" target="strony">Zadanie 69</a><br><br>
+<a href="zadanie70_Mora.html" target="strony">Zadanie 70</a><br><br>
 <a href="zad_71_Mora.html" target="strony">Zadanie 71</a><br><br>
+<a href="zadanie72_Mora.html" target="strony">Zadanie 72</a><br><br>
+<a href="zadanie73_Mora.html" target="strony">Zadanie 73</a><br><br>
+<a href="zadanie74_Mora.html" target="strony">Zadanie 74</a><br><br>
+<a href="zadanie75_Mora.html" target="strony">Zadanie 75</a><br><br>
+<a href="zadanie76_Mora.html" target="strony">Zadanie 76</a><br><br>
+<a href="zadanie77_Mora.html" target="strony">Zadanie 77</a><br><br>
 <a href="zad_58_Mora.html" target="strony">Zadanie 58</a><br><br>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
