--- a/index.html
+++ b/index.html
@@ -67,11 +67,22 @@
 <a href="zadanie33_kod_Mora.html" target="strony">Zadanie33_kod</a><br>
 <a href="zadanie34_kod_Mora.html" target="strony">Zadanie34_kod</a><br>
 <a href="zadanie36_kod_Mora.html" target="strony">Zadanie36_kod</a><br>
+<a href="zadanie62_kod_Mora.html" target="strony">Zadanie62_kod</a><br>
+
 <a href="zadanie64_kod_Mora.html" target="strony">Zadanie64_kod</a><br>
 <a href="zadanie65_kod_Mora.html" target="strony">Zadanie65_kod</a><br>
 <a href="zadanie66_kod_Mora.html" target="strony">Zadanie66_kod</a><br>
 <a href="zadanie67_kod_Mora.html" target="strony">Zadanie67_kod</a><br>
 <a href="zadanie68_kod_Mora.html" target="strony">Zadanie68_kod</a><br>
+<a href="zadanie69_kod_Mora.html" target="strony">Zadanie69_kod</a><br>
+<a href="zadanie70_kod_Mora.html" target="strony">Zadanie70_kod</a><br>
+<a href="zadanie71_kod_Mora.html" target="strony">Zadanie71_kod</a><br>
+<a href="zadanie72_kod_Mora.html" target="strony">Zadanie72_kod</a><br>
+<a href="zadanie73_kod_Mora.html" target="strony">Zadanie73_kod</a><br>
+<a href="zadanie74_kod_Mora.html" target="strony">Zadanie74_kod</a><br>
+<a href="zadanie75_kod_Mora.html" target="strony">Zadanie75_kod</a><br>
+<a href="zadanie76_kod_Mora.html" target="strony">Zadanie76_kod</a><br>
+<a href="zadanie77_kod_Mora.html" target="strony">Zadanie77_kod</a><br>
 
 
 </td>
