--- a/zadanie66_kod_Mora.html
+++ b/zadanie66_kod_Mora.html
@@ -18,10 +18,13 @@ DOKUMENT HTML
 <script language="JavaScript">
 for(i=1;i<=10;i++)
 {
-document.write("wyúwietlam "+i+" raz"+" Morawiak"+"<br>");
+document.write("wy≈ìwietlam "+i+" raz"+" Morawiak"+"<br>");
 }
 </script>
 </div>
 </head>
 </body>
 </html>
+
+
+<!--Max Morawiak-->
