--- a/zadanie67_kod_Mora.html
+++ b/zadanie67_kod_Mora.html
@@ -29,3 +29,6 @@ document.write ("<p style=\"font-size: 42.px; color: black;\"><br>Max<br></p>");
 </head>
 </body>
 </html>
+
+
+<!--Max Morawiak-->
